<resources>
    <string name="app_name">QueRolloApp</string>

    <string name="chats">Chats</string>
    <string name="groups">Grupos</string>
    <string name="contacts">Contactos</string>
    <string name="acceder">Acceder</string>
    <string name="forgetPassword"><u>¿Olvidaste la contraseña?</u></string>
    <string name="new_account"><u>¿Necesitas una nueva cuenta?</u></string>
    <string name="phone">Teléfono celular</string>
    <string name="using_phone">o acceder usando mi</string>
    <string name="create_account">Crear cuenta</string>
    <string name="already_have_account"><u>¿Ya tienes una cuenta? Inicia sesión</u></string>
    <string name="find_friends">Encuentra amigos</string>
    <string name="settings">Ajustes</string>
    <string name="logout">Cerrar sesión</string>
    <string name="username">Nombre de usuario</string>
    <string name="available">Disponible</string>
    <string name="update_settings">Actualizar</string>
    <string name="create_group">Crear un grupo</string>
    <string name="type_a_message">Escribe un mensaje...</string>

    <string name="transition_dialog">transition_dialog</string>
    <string name="phone_number">Número de teléfono</string>
    <string name="verification_code">Código de verificación</string>
    <string name="send_verification_code">Enviar código de verificación</string>
    <string name="verify">Verificar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat_requests">Solicitudes</string>
    <string name="decline_chat_request">RECHAZAR</string>
    <string name="accept_chat_request">ACEPTAR</string>
    <string name="chat_request">Solicitud de amistad</string>
    <string name="accept">Aceptar</string>
    <string name="decline">Rechazar</string>
    <string name="profile_image_shared">profile_image_shared</string>
    <string name="user_name_shared">user_name_shared</string>
    <string name="status_shared">status_shared</string>
    <string name="online">En línea</string>
    <string name="offline">desconectado</string>
    <string name="message_deleted">Mensaje eliminado</string>
    <string name="gallery">Galería</string>
    <string name="audio">Audio</string>
    <string name="contact">Contacto</string>
</resources>
