<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".PhoneLoginActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_phone_number"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:hint="@string/phone_number"
        app:boxStrokeColor="@color/colorAccent"
        app:boxStrokeWidth="10dp"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:errorEnabled="true"
        app:hintAnimationEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_number_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_phone_black_24dp"
            android:inputType="number"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_verification_code"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:hint="@string/verification_code"
        android:visibility="invisible"
        app:boxStrokeColor="@color/colorAccent"
        app:boxStrokeWidth="10dp"
        app:errorEnabled="true"
        app:hintAnimationEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/verification_code_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_code_black_24dp"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_send_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_phone_number"
        android:layout_margin="15dp"
        android:background="@color/colorPrimaryDark"
        android:layoutDirection="rtl"
        android:text="@string/send_verification_code"
        android:textColor="#fff"
        app:cornerRadius="20dp"
        app:icon="@drawable/ic_send_black_24dp"
        app:rippleColor="@color/colorAccent"
        android:layout_alignParentEnd="true"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_phone_number"
        android:layout_alignParentEnd="true"
        android:layout_margin="12dp"
        android:background="@color/colorPrimaryDark"
        android:layoutDirection="rtl"
        android:text="@string/verify"
        android:textColor="#fff"
        android:visibility="invisible"
        app:cornerRadius="20dp"
        app:icon="@drawable/ic_check_black_24dp"
        app:rippleColor="@color/colorAccent" />

</RelativeLayout>