<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/recycler_ripple"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="5dp"
        android:background="#22000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_profile_image"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/profile_image"
            android:transitionName="@string/transition_dialog"
            app:civ_border_color="@color/colorPrimaryDark"
            app:civ_border_width="1dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:id="@+id/user_profile_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="8"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:maxWidth="210dp"
                    android:padding="2dp"
                    android:singleLine="true"
                    android:text="Username"
                    android:textSize="18dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/user_profile_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:ellipsize="marquee"
                android:focusable="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:padding="2dp"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="último mensaje"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_request_accept"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/buttons"
                    android:padding="4dp"
                    android:text="@string/accept_chat_request"
                    android:textColor="@android:color/background_light"
                    android:textSize="12sp"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/btn_request_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/decline_buttons"
                    android:padding="4dp"
                    android:text="@string/decline_chat_request"
                    android:textColor="@android:color/background_light"
                    android:textSize="12sp"
                    android:visibility="invisible" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</LinearLayout>